--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
   <button id="cake-button" onclick="revealLetter()" title="Click the cake!">
-    <img src="https://cdn.pixabay.com/photo/2016/11/29/04/17/cake-1869227_960_720.jpg" alt="Strawberry Cake">
+    <img src="att.wDPIYz-oZXhddB099uuigvvkfLaUZ9daIR-JD2W9gCY.jpeg" alt="Strawberry Cake">
   </button>
 
   <div id="letter" class="letter">
