--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
   <button id="cake-button" onclick="revealLetter()" title="Click the cake!">
-    <img src="att.wDPIYz-oZXhddB099uuigvvkfLaUZ9daIR-JD2W9gCY.jpeg" alt="Strawberry Cake">
+    <img src="att.wDPIYz-oZXhddB099uuigvvkfLaUZ9daIR-JD2W9gCY.jpeg">
   </button>
 
   <div id="letter" class="letter">
