--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Strawberry Surprise</title>
   <style>
     body {
-      font-family: 'Georgia', serif;
+      font-family: 'Sans', serif;
       background: #fff0f5;
       display: flex;
       flex-direction: column;
