--- a/index.html
+++ b/index.html
@@ -53,15 +53,18 @@
   </button>
 
   <div id="letter" class="letter">
-    <h2>Sweetest Wishes!</h2>
+    <h2>To you..</h2>
     <p>
-      Inside this strawberry delight lies a message just for you. May your days be as sweet as frosting and your heart as full as this cake.
+      To the girl I love the most;
+    </p>
+    <p>
+      Happy 17th birthday! 
     </p>
     <p>
       Keep smiling, and share the sweetness wherever you go.
     </p>
     <p>
-      — Your Secret Pastry Pal
+      — ur bukod-tangi ☺️
     </p>
   </div>
 
