--- a/index.html
+++ b/index.html
@@ -53,15 +53,12 @@
   </button>
 
   <div id="letter" class="letter">
-    <h2>To you..</h2>
+    <h2>Dear Shae,</h2>
     <p>
-      To the girl I love the most;
+      To the girl I love the most, I wish you the happiest 17th birthday.
     </p>
     <p>
-      Happy 17th birthday! 
-    </p>
-    <p>
-      Keep smiling, and share the sweetness wherever you go.
+      There's a lot I would like to say to you, but I can't find the words appropriate for it. But I'm going to say these words; you were the greatest sunlight that ever striked my skin. This analogy best explains what you are to me. The first time I had feelings for you, it was sudden. It almsot seemed like a "rebound" due to the pace; however it wasn't. I was already sure I liked you at the time. But now, I don't like you. 'Cause I love you and every inch of you. Your persona, yourself. I love every part of you cause every part of you screams you. It's a feeling where you know that your partner is the most perfect being you could have ever asked for because you're willing to accept any flaws they might have and love them for it. Keep smiling, and share the sweetness wherever you go.
     </p>
     <p>
       — ur bukod-tangi ☺️
