--- a/index.html
+++ b/index.html
@@ -66,19 +66,9 @@
   </div>
 
   <!-- Sound Effect -->
-  <audio id="cakeSound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_0d8b19f82d.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
+  <audio src="Zild - Huminga (Bahay-bahayan Sessions).mp3" autoplay loop>
+  
   </audio>
-
-  <script>
-    function revealLetter() {
-      const letter = document.getElementById("letter");
-      const sound = document.getElementById("cakeSound");
-      letter.style.display = "block";
-      sound.play();
-    }
-  </script>
 
 </body>
 </html>
