--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
   <audio src="Zild - Huminga (Bahay-bahayan Sessions).mp3" autoplay loop>
   
   </audio>
-
+  <script>
+    function revealLetter() {
+      const letter = document.getElementById("letter");
+      letter.style.display = "block";
+    }
+  </script>
 </body>
 </html>
