--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </div>
 
   <!-- Sound Effect -->
-  <audio src="Zild - Huminga (Bahay-bahayan Sessions).mp3" autoplay loop>
-  
+  <audio controls autoplay>
+    <source src="Zild - Huminga (Bahay-bahayan Sessions).mp3">
   </audio>
   <script>
     function revealLetter() {
