--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <!-- Sound Effect -->
   <audio autoplay loop>
-    <source src="Zild - Huminga (Bahay-bahayan Sessions).mp3" type="audio/mpeg">
+    <source src="Zild - Huminga (Bahay-bahayan Sessions).mp3" type="audio/mp3">
   </audio>
   <script>
     function revealLetter() {
