--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <!-- Sound Effect -->
-  <audio autoplay loop>
+  <audio control autoplay loop>
     <source src="Zild - Huminga (Bahay-bahayan Sessions).mp3" type="audio/mp3">
   </audio>
   <script>
